--- a/nextflow.config
+++ b/nextflow.config
@@ -170,6 +170,8 @@ params {
 
     busco_lineage              = null
     // Specify taxonomic lineage protein dataset for BUSCO completeness quality checking
+
+    lineage = null
     
     centrifuge_db              = null 
     // Path to centrifuge database for ONT contaminant filtering 
