--- a/conf/modules.config
+++ b/conf/modules.config
@@ -228,6 +228,14 @@ process {
         ]
     }
 
+    withName: COMPLEASM {
+        publishDir = [
+            path: { "${params.outdir}/assembly_qc/compleasm/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     withName: MERQURY {
         publishDir = [
             path: { "${params.outdir}/assembly_qc/merqury/${meta.id}" },
@@ -269,7 +277,23 @@ process {
         ]
     }
 
+    withName: WINNOWMAP {
+        publishDir = [
+            path: { "${params.outdir}/assembly_qc/winnowmap" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     withName: SAMTOOLS_INDEX {
+        publishDir = [
+            path: { "${params.outdir}/assembly_qc/samtools/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: SAMTOOLS_SORT {
         publishDir = [
             path: { "${params.outdir}/assembly_qc/samtools/${meta.id}" },
             mode: params.publish_dir_mode,
