--- a/nextflow.config
+++ b/nextflow.config
@@ -102,6 +102,12 @@ params {
 
     //// ASSEMBLY QC OPTIONS ////
 
+    busco                      = true
+    // Run busco for completeness stats, required true for blobtools visualization
+
+    compleasm                  = false
+    // Run compleasm for completeness stats
+
     tolerable_collision        = 0.001
     // Tolerable collision rate for Merqury
 
