--- a/nextflow.config
+++ b/nextflow.config
@@ -177,7 +177,7 @@ params {
     busco_lineage              = null
     // Specify taxonomic lineage protein dataset for BUSCO completeness quality checking
 
-    lineage = null
+    compleasm_lineage          = null
     
     centrifuge_db              = null 
     // Path to centrifuge database for ONT contaminant filtering 
