--- a/nextflow.config
+++ b/nextflow.config
@@ -119,11 +119,15 @@ params {
 
     //// POLISH OPTIONS ////
 
+    pilon                      = false
+
     medaka_polish              = false
     // Run medaka polishing on assemblies
 
     racon_polish               = true
     // Run racon polishing on assemblies and or medaka polish
+
+    polca                      = true
 
 
     //// PURGE OPTIONS ////
