--- a/nextflow.config
+++ b/nextflow.config
@@ -119,7 +119,7 @@ params {
 
     //// POLISH OPTIONS ////
 
-    pilon                      = false
+    pilon                      = true
 
     medaka_polish              = false
     // Run medaka polishing on assemblies
