--- a/conf/modules.config
+++ b/conf/modules.config
@@ -53,7 +53,7 @@ process {
 
     withName: RECENTRIFUGE_KR {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/kraken2/visualization/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/kraken2/visualization/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
