--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,7 +29,7 @@ process {
     withName: CENTRIFUGE_CENTRIFUGE {
         ext.args = "--min-hitlen 50"
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/centrifuge/" },
+            path: { "${params.outdir}/01_read_qc/decontam_centrifuge/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -37,7 +37,7 @@ process {
 
     withName: CENTRIFUGE_KREPORT {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/centrifuge/kreport" },
+            path: { "${params.outdir}/01_read_qc/decontam_centrifuge/kreport" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -45,7 +45,7 @@ process {
 
     withName: RECENTRIFUGE_C {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/centrifuge/visualization" },
+            path: { "${params.outdir}/01_read_qc/decontam_centrifuge/visualization" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -53,7 +53,7 @@ process {
 
     withName: RECENTRIFUGE_KR {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/kraken2/visualization/" },
+            path: { "${params.outdir}/01_read_qc/decontam_kraken2/visualization/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -165,7 +165,7 @@ process {
 
     withName: SEQKIT_GREP {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/centrifuge/filtered" },
+            path: { "${params.outdir}/01_read_qc/decontam_centrifuge/filtered" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -420,7 +420,7 @@ process {
 
     withName: KRAKEN2_KRAKEN2_SR {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/kraken2/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/decontam_kraken2/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -428,7 +428,7 @@ process {
 
     withName: KRAKEN2_KRAKEN2_PB {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/kraken2/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/decontam_kraken2/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
