--- a/conf/modules.config
+++ b/conf/modules.config
@@ -213,7 +213,7 @@ process {
 
     withName: QUAST {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/quast/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/quast" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -222,7 +222,7 @@ process {
     withName: BUSCO {
         ext.args = '-m genome'
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/busco/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/busco" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -230,7 +230,7 @@ process {
 
     withName: COMPLEASM {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/compleasm/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/compleasm" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -238,7 +238,7 @@ process {
 
     withName: MERQURY {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/merqury/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/merqury" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -246,7 +246,7 @@ process {
 
     withName: MERYL_COUNT {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/merqury/${meta.id}_db" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/merqury/db" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -254,7 +254,7 @@ process {
 
     withName: WINNOWMAP {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/winnowmap" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/winnowmap" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -262,7 +262,7 @@ process {
 
     withName: SAMTOOLS_INDEX {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/samtools/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/samtools" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -270,7 +270,7 @@ process {
 
     withName: SAMTOOLS_SORT {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/samtools/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/samtools" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -278,7 +278,7 @@ process {
 
     withName: BWAMEM2_INDEX {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/bwamem2/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/bwamem2" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -286,7 +286,7 @@ process {
 
     withName: BWAMEM2_MEM {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/bwamem2/${meta.id}" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/bwamem2" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
