--- a/conf/modules.config
+++ b/conf/modules.config
@@ -321,7 +321,7 @@ process {
 
     withName: MEDAKA {
         publishDir = [
-            path: { "${params.outdir}/03_polish/long_read/medaka" },
+            path: { "${params.outdir}/03_polish/medaka" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -330,7 +330,7 @@ process {
 
     withName: RACON {
         publishDir = [
-            path: { "${params.outdir}/03_polish/long_read/racon" },
+            path: { "${params.outdir}/03_polish/racon" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -436,7 +436,15 @@ process {
 
     withName: POLCA {
         publishDir = [
-            path: { "${params.outdir}/03_polish/hybrid/polca" },
+            path: { "${params.outdir}/03_polish/polca" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: PILON {
+        publishDir = [
+            path: { "${params.outdir}/03_polish/pilon" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
