--- a/nextflow.config
+++ b/nextflow.config
@@ -108,6 +108,10 @@ params {
     compleasm                  = false
     // Run compleasm for completeness stats
 
+    winnowmap                  = true
+
+    minimap2                   = false
+
     tolerable_collision        = 0.001
     // Tolerable collision rate for Merqury
 
