--- a/conf/modules.config
+++ b/conf/modules.config
@@ -246,7 +246,7 @@ process {
 
     withName: MERYL_COUNT {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/${meta.id}/merqury/db" },
+            path: { "${params.outdir}/assembly_qc/${meta.id}/merqury/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
