--- a/nextflow.config
+++ b/nextflow.config
@@ -99,15 +99,18 @@ params {
 
     //// ASSEMBLY QC OPTIONS ////
 
-    busco                      = true
-    // Run busco for completeness stats, required true for blobtools visualization
+    busco                      = false
+    // Run busco for completeness stats, required true for blobtools visualization, choice between busco and compleasm
 
-    compleasm                  = false
-    // Run compleasm for completeness stats
+    compleasm                  = true
+    // Run compleasm for completeness stats, choice between busco and compleasm
 
-    winnowmap                  = true
+    winnowmap                  = false
+    // Run winnowmap for read alignments to genome, choice between winnowmap and minimap2
+    
+    minimap2                   = true
+    // Run minimap2 for read alignments to genome, choice between winnowmap and minimap2
 
-    minimap2                   = false
 
     tolerable_collision        = 0.001
     // Tolerable collision rate for Merqury
@@ -157,7 +160,7 @@ params {
 
 
     //// VISUALIZATION OPTIONS ////
-    blobtools_visualization    = true
+    blobtools_visualization    = false
     // Run blobtools on final assemblies
 
 
