--- a/nextflow.config
+++ b/nextflow.config
@@ -131,7 +131,7 @@ params {
     racon_polish               = true
     // Run racon polishing on assemblies and or medaka polish
 
-    polca                      = true
+    polca                      = false
 
 
     //// PURGE OPTIONS ////
