--- a/nextflow.config
+++ b/nextflow.config
@@ -85,6 +85,8 @@ params {
     hifiasm                    = false
     // Run hifiasm assembler with HiFi and ONT ultra long reads, if available
 
+    verkko                     = false
+
     masurca                    = false
     // Run masurca assembler with long and short reads, if available
     
