--- a/nextflow.config
+++ b/nextflow.config
@@ -79,6 +79,9 @@ params {
     flye                       = true
     // Run flye assembler with long reads, if available
 
+    flye_mode                 = 'both'
+    // Runs flye with 'ont' or 'pb' reads, or 'both'- most useful for excluding worse flye assembly from polishing
+
     canu                       = false
     // Run canu assembler with long reads, if available
 
