--- a/nextflow.config
+++ b/nextflow.config
@@ -88,7 +88,7 @@ params {
     hifiasm                    = false
     // Run hifiasm assembler with HiFi and ONT ultra long reads, if available
 
-    verkko                     = false
+    verkko                     = true
 
     masurca                    = false
     // Run masurca assembler with long and short reads, if available
