--- a/nextflow.config
+++ b/nextflow.config
@@ -79,9 +79,6 @@ params {
     flye                       = true
     // Run flye assembler with long reads, if available
 
-    flye_mode                 = 'both'
-    // Runs flye with 'ont' or 'pb' reads, or 'both'- most useful for excluding worse flye assembly from polishing
-
     canu                       = false
     // Run canu assembler with long reads, if available
 
@@ -209,6 +206,9 @@ params {
 
     manual_genome_size         = null
     // Specify a genome size rather than using output from Genomescope2 or Kmerfreq
+
+    flye_mode                 = null
+    // Runs flye with 'ont' or 'pb' reads, or 'both'- most useful for excluding worse flye assembly from polishing
 
     pb_xml                     = null
     // SubreadSet or ConsensusReadSet dataset XML (optionally) inputted for PacBio quality checking
