--- a/nextflow.config
+++ b/nextflow.config
@@ -107,10 +107,10 @@ params {
     compleasm                  = true
     // Run compleasm for completeness stats, choice between busco and compleasm
 
-    winnowmap                  = false
+    winnowmap                  = true
     // Run winnowmap for read alignments to genome, choice between winnowmap and minimap2
     
-    minimap2                   = true
+    minimap2                   = false
     // Run minimap2 for read alignments to genome, choice between winnowmap and minimap2
 
 
