--- a/nextflow.config
+++ b/nextflow.config
@@ -101,10 +101,10 @@ params {
 
     //// ASSEMBLY QC OPTIONS ////
 
-    busco                      = false
+    busco                      = true
     // Run busco for completeness stats, required true for blobtools visualization, choice between busco and compleasm
 
-    compleasm                  = true
+    compleasm                  = false
     // Run compleasm for completeness stats, choice between busco and compleasm
 
     winnowmap                  = true
