--- a/nextflow.config
+++ b/nextflow.config
@@ -125,7 +125,7 @@ params {
 
     //// POLISH OPTIONS ////
 
-    pilon                      = true
+    pilon                      = false
 
     medaka_polish              = false
     // Run medaka polishing on assemblies
@@ -133,7 +133,7 @@ params {
     racon_polish               = true
     // Run racon polishing on assemblies and or medaka polish
 
-    polca                      = false
+    polca                      = true
 
 
     //// PURGE OPTIONS ////
