--- a/conf/modules.config
+++ b/conf/modules.config
@@ -69,7 +69,7 @@ process {
 
     withName: KMER_FREQ {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/ont_kmerfreq" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -77,7 +77,7 @@ process {
 
     withName: GCE {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/ont_gce" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -85,7 +85,7 @@ process {
 
     withName: EXTRACT_SR {
         publishDir = [
-            path: { "${params.outdir}/output/genome_size_est/illumina" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -93,7 +93,7 @@ process {
 
     withName: EXTRACT_LR {
         publishDir = [
-            path: { "${params.outdir}/output/genome_size_est/ont" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -101,7 +101,7 @@ process {
 
     withName: EXTRACT_PB {
         publishDir = [
-            path: { "${params.outdir}/output/genome_size_est/pacbio" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -109,7 +109,7 @@ process {
 
     withName: FORMAT {
         publishDir = [
-            path: { "${params.outdir}/output/genome_size_est/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -117,7 +117,7 @@ process {
 
     withName: TOTAL_BASES_LR {
         publishDir = [
-            path: { "${params.outdir}/output/coverage" },
+            path: { "${params.outdir}/01_read_qc/coverage" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -125,7 +125,7 @@ process {
 
     withName: TOTAL_BASES_SR {
         publishDir = [
-            path: { "${params.outdir}/output/coverage" },
+            path: { "${params.outdir}/01_read_qc/coverage" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -133,7 +133,7 @@ process {
 
     withName: COVERAGE_LR {
         publishDir = [
-            path: { "${params.outdir}/output/coverage" },
+            path: { "${params.outdir}/01_read_qc/coverage" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -141,7 +141,7 @@ process {
 
     withName: COVERAGE_LR_PB {
         publishDir = [
-            path: { "${params.outdir}/output/coverage" },
+            path: { "${params.outdir}/01_read_qc/coverage" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -149,7 +149,7 @@ process {
 
     withName: COVERAGE_SR {
         publishDir = [
-            path: { "${params.outdir}/output/coverage" },
+            path: { "${params.outdir}/01_read_qc/coverage" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -396,7 +396,7 @@ process {
 
     withName: GENOMESCOPE2 {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/genomescope2/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -404,7 +404,7 @@ process {
 
     withName: JELLYFISH_HIST {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/jellyfish/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -412,7 +412,7 @@ process {
 
     withName: JELLYFISH_KMER {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/jellyfish/${meta.id}" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
