--- a/conf/modules.config
+++ b/conf/modules.config
@@ -492,7 +492,7 @@ process {
 
     withName: BLOBTOOLS_CONFIG {
         publishDir = [
-            path: { "${params.outdir}/output/blobtools" },
+            path: { "${params.outdir}/assembly_qc/blobtools" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -500,21 +500,21 @@ process {
 
     withName: BLOBTOOLS_RUN {
         publishDir = [
-            path: { "${params.outdir}/output/blobtools" },
+            path: { "${params.outdir}/assembly_qc/blobtools" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
     withName: BLOBTOOLS_VIEW {
         publishDir = [
-            path: { "${params.outdir}/output/blobtools" },
+            path: { "${params.outdir}/assembly_qc/blobtools" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
     withName: BLOBTOOLS_BLAST {
         publishDir = [
-            path: { "${params.outdir}/output/blobtools/blast_hits" },
+            path: { "${params.outdir}/assembly_qc/blobtools/blast_hits" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
