--- a/nextflow.config
+++ b/nextflow.config
@@ -90,7 +90,7 @@ params {
     masurca                    = false
     // Run masurca assembler with long and short reads, if available
     
-    masurca_sr_adv             = false
+    masurca_adv             = false
     // Run masurca assembler using a manually curated configuration file
 
     redundans                  = false
