--- a/conf/modules.config
+++ b/conf/modules.config
@@ -69,7 +69,7 @@ process {
 
     withName: KMER_FREQ {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -77,7 +77,7 @@ process {
 
     withName: GCE {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -93,7 +93,7 @@ process {
 
     withName: EXTRACT_LR {
         publishDir = [
-            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id" },
+            path: { "${params.outdir}/01_read_qc/genome_size_est/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
