--- a/nextflow.config
+++ b/nextflow.config
@@ -85,7 +85,7 @@ params {
     hifiasm                    = false
     // Run hifiasm assembler with HiFi and ONT ultra long reads, if available
 
-    verkko                     = true
+    verkko                     = false
 
     masurca                    = false
     // Run masurca assembler with long and short reads, if available
