--- a/conf/modules.config
+++ b/conf/modules.config
@@ -492,7 +492,7 @@ process {
 
     withName: BLOBTOOLS_CONFIG {
         publishDir = [
-            path: { "${params.outdir}/assembly_qc/blobtools" },
+            path: { "${params.outdir}/assembly_qc/blobtools/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
