--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,8 @@ params {
     ONT_lr_ultralong           = false
     // ONT reads being provided are ultra long
 
+    ONT_lr_herrocorrected      = false
+
     PacBioHifi_lr              = true
     // PacBio reads are available
 
