updates to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ params {
     tar                        = false
     // fastq or fastq.gz file in .tar format
 
-    longread                   = true
+    longread                   = false
     // ONT and or PacBio Hifi reads available
 
     ONT_lr                     = false
@@ -23,7 +23,7 @@ params {
     ONT_lr_ultralong           = false
     // ONT reads being provided are ultra long
 
-    PacBioHifi_lr              = true
+    PacBioHifi_lr              = false
     // PacBio reads are available
 
     shortread                  = false
@@ -82,11 +82,14 @@ params {
     compleasm                  = false
     // Run compleasm for completeness stats, choice between busco and compleasm
 
-    winnowmap                  = true
+    winnowmap                  = false
     // Run winnowmap for read alignments to genome, choice between winnowmap and minimap2
     
     minimap2                   = false
     // Run minimap2 for read alignments to genome, choice between winnowmap and minimap2
+
+    merqury                    = true
+    // Run merqury for evaluating  genome with kmers, Correctness!
 
 
     tolerable_collision        = 0.001
