--- a/nextflow.config
+++ b/nextflow.config
@@ -105,6 +105,10 @@ params {
 
     // Required params (vary depending on read input)
 
+    kmer_num                   = 21
+    // Preferred kmer number for meryl and other similar programs
+
+
     input                      = null    
     // Path to ONT samplesheet, or PacBio samplesheet if no ONT reads
 
